Swagger updated.
